# routes/noteRouter.js
@@ -1,12 +1,22 @@
-const express = require('express');
-const { createNote, getAllNotes, getNote, deleteAllNotes, deleteNote, updateNote } = require('../controllers/noteController');
+const express = require("express");
+const {
+  createNote,
+  getAllNotes,
+  getAllNotesUser,
+  getNote,
+  deleteAllNotes,
+  deleteNote,
+  updateNote,
+} = require("../controllers/noteController");
 
-const { VerifyAuthentication } = require('./../middlewares/authentication')
-const router = express.Router()
-
+const { VerifyAuthentication } = require("./../middlewares/authentication");
+const router = express.Router();
 
 // route to create a new note with authentication token
-router.post("/",VerifyAuthentication, createNote
+router.post(
+  "/",
+  VerifyAuthentication,
+  createNote
   // #swagger.tags = ['Notes']
   // #swagger.summary = 'Create Note'
   // #swagger.description = 'Endpoint to create Note.'
@@ -33,23 +43,48 @@ router.post("/",VerifyAuthentication, createNote
 );
 
 // route to get all notes with authentication token
-router.get("/",VerifyAuthentication,getAllNotes
- // #swagger.tags = ['Notes']
+router.get(
+  "/",
+  VerifyAuthentication,
+  getAllNotes
+  // #swagger.tags = ['Notes']
   // #swagger.summary = 'Get All User Note'
   // #swagger.description = 'Endpoint to get All User Note.'
   // # #swagger.parameters['limit'] = { description: 'Limit of notes to be returned', type: 'integer' }
 
-   /* #swagger.responses[500] = { 
+  /* #swagger.responses[500] = { 
       description: "Notes gotten failed" } */
   /* #swagger.responses[200] = {
       description: "Notes gotten successfully" } */
-   /* #swagger.security = [{
+  /* #swagger.security = [{
       "JWT": []
     }] */
 );
 
+// route to get all notes with authentication token
+router.get(
+  "/user",
+  VerifyAuthentication,
+  getAllNotesUser
+  // #swagger.tags = ['Notes']
+  // #swagger.summary = 'Get All User Note by User'
+  // #swagger.description = 'Endpoint to get All User Note by user.'
+  // # #swagger.parameters['limit'] = { description: 'Limit of notes to be returned', type: 'integer' }
+
+  /* #swagger.responses[500] = { 
+         description: "Notes gotten failed" } */
+  /* #swagger.responses[200] = {
+         description: "Notes gotten successfully" } */
+  /* #swagger.security = [{
+         "JWT": []
+       }] */
+);
+
 // route to get a single note with authentication token
-router.get("/:id",VerifyAuthentication, getNote
+router.get(
+  "/:id",
+  VerifyAuthentication,
+  getNote
   // #swagger.tags = ['Notes']
   // #swagger.summary = 'Get A Note'
   // #swagger.description = 'Endpoint to get a Note.'
@@ -58,7 +93,7 @@ router.get("/:id",VerifyAuthentication, getNote
         description: 'ID of the Note'
     } */
 
-   /* #swagger.responses[500] = { 
+  /* #swagger.responses[500] = { 
       description: "Note gotten failed" } */
   /* #swagger.responses[400] = { 
       description: "Note ID required" } */
@@ -72,7 +107,10 @@ router.get("/:id",VerifyAuthentication, getNote
 );
 
 // route to delete all notes authenticated
-router.delete("/",VerifyAuthentication, deleteAllNotes
+router.delete(
+  "/",
+  VerifyAuthentication,
+  deleteAllNotes
   // #swagger.tags = ['Notes']
   // #swagger.summary = 'Delete Notes'
   // #swagger.description = 'Endpoint to delete Notes.'
@@ -91,11 +129,14 @@ router.delete("/",VerifyAuthentication, deleteAllNotes
 );
 
 // route to delete a single note with authentication token
-router.delete("/:id", VerifyAuthentication, deleteNote
+router.delete(
+  "/:id",
+  VerifyAuthentication,
+  deleteNote
   // #swagger.tags = ['Notes']
   // #swagger.summary = 'Delete Note'
   // #swagger.description = 'Endpoint to delete Note.'
-    /* #swagger.parameters['id'] = {
+  /* #swagger.parameters['id'] = {
         in: 'path',
         description: 'ID of the Note'
     } */
@@ -114,16 +155,19 @@ router.delete("/:id", VerifyAuthentication, deleteNote
 );
 
 // route to update a single note with authentication token
-router.put("/:id",VerifyAuthentication, updateNote
-    // #swagger.tags = ['Notes']
-    // #swagger.summary = 'Update A Note'
-    // #swagger.description = 'Endpoint to update a Note.'
-    /* #swagger.parameters['id'] = {
+router.put(
+  "/:id",
+  VerifyAuthentication,
+  updateNote
+  // #swagger.tags = ['Notes']
+  // #swagger.summary = 'Update A Note'
+  // #swagger.description = 'Endpoint to update a Note.'
+  /* #swagger.parameters['id'] = {
             in: 'path',
             description: 'ID of the Note',
             required: true
         } */
-    /* #swagger.requestBody = {
+  /* #swagger.requestBody = {
         required: true,
         content: {
             "application/json": {
@@ -132,17 +176,17 @@ router.put("/:id",VerifyAuthentication, updateNote
         }
         } */
 
-     /* #swagger.responses[500] = { 
+  /* #swagger.responses[500] = { 
       description: "Note update failed" } */
-    /* #swagger.responses[400] = { 
+  /* #swagger.responses[400] = { 
         description: "Note ID required" } */
-    /* #swagger.responses[204] = {
+  /* #swagger.responses[204] = {
         description: "Note ID not found" } */
-    /* #swagger.responses[200] = {
+  /* #swagger.responses[200] = {
         description: "Note updated successfully" } */
-    /* #swagger.security = [{
+  /* #swagger.security = [{
         "JWT": []
         }] */
 );
 
-module.exports = router
+module.exports = router;
